--- a/views/marisa/css/main.css
+++ b/views/marisa/css/main.css
@@ -285,7 +285,7 @@ a {
 
 pre, #toc, #cate, #redirect {
     border: 1px solid #aaa;
-    background: #2BAE66;
+    background: white;
 }
 
 textarea, input {
