--- a/views/marisa/css/main.css
+++ b/views/marisa/css/main.css
@@ -37,7 +37,7 @@ li {
 }
 
 #background {
-    background: #2BAE66;
+    background: gainsboro;
 }
 
 #top {
@@ -57,13 +57,13 @@ li {
     margin-top: -20px;
     padding: 20px;
     padding-bottom: 20px;
-    background: #2BAE66;
+    background: white;
     min-height: 350px;
 }
 
 #bottom {
     width: 100%;
-    background: #2BAE66;
+    background: gainsboro;
     padding-bottom: 20px;
 }
 
@@ -191,7 +191,7 @@ h6 {
     border: 1px solid #aaa;
     padding: 10px;
     position: absolute;
-    background: #2BAE66;
+    background: #72f8af;
     margin-top: 10px;
 }
 
@@ -237,7 +237,7 @@ div#pre_search {
     width: 200px;
     color: black;
     margin-top: 5px;
-    background: #2BAE66;
+    background: gainsboro;
     position: absolute;
 }
 
@@ -285,7 +285,6 @@ a {
 
 pre, #toc, #cate, #redirect {
     border: 1px solid #aaa;
-    background: #2BAE66;
 }
 
 textarea, input {
